--- a/package.json
+++ b/package.json
@@ -1,20 +1,36 @@
 {
-  "name": "kuhn4sports",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "next": "12.1.6",
-    "react": "18.1.0",
-    "react-dom": "18.1.0"
-  },
-  "devDependencies": {
-    "eslint": "8.15.0",
-    "eslint-config-next": "12.1.6"
-  }
+    "name": "ts-storyblok",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
+    },
+    "dependencies": {
+        "@fontsource/roboto": "^4.5.3",
+        "@material-ui/core": "^4.12.3",
+        "@storyblok/storyblok-editable": "^1.0.0",
+        "@svgr/webpack": "^6.2.1",
+        "@types/styled-components": "^5.1.24",
+        "next": "12.1.0",
+        "next-sitemap": "^2.5.14",
+        "react": "17.0.2",
+        "react-cookiebot": "^1.0.10",
+        "react-dom": "17.0.2",
+        "react-helmet": "^6.1.0",
+        "react-juicer-feed": "^0.0.2-alpha-4",
+        "storyblok-js-client": "^4.1.3",
+        "styled-components": "^5.3.3"
+    },
+    "devDependencies": {
+        "@types/node": "17.0.21",
+        "@types/react": "17.0.39",
+        "@types/react-cookiebot": "^1.0.1",
+        "eslint": "8.10.0",
+        "eslint-config-next": "12.1.0",
+        "storyblok-rich-text-react-renderer": "^2.3.1",
+        "typescript": "4.6.2"
+    }
 }
