--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
         "dev": "next dev",
         "build": "next build",
         "start": "next start",
-        "lint": "next lint"
+        "lint:next": "next lint",
+        "lint": "run-p lint:*",
+        "lint:eslint": "eslint --max-warnings 0 --config ./.eslintrc.cli.js --ext .ts,.tsx,.js,.jsx,.json,.md src",
+        "lint:tsc": "tsc --project ."
     },
     "dependencies": {
         "@fontsource/roboto": "^4.5.3",
@@ -28,8 +31,19 @@
         "@types/node": "17.0.21",
         "@types/react": "17.0.39",
         "@types/react-cookiebot": "^1.0.1",
+        "@typescript-eslint/eslint-plugin": "^5.25.0",
+        "@typescript-eslint/parser": "^5.25.0",
         "eslint": "8.10.0",
         "eslint-config-next": "12.1.0",
+        "eslint-config-prettier": "^8.5.0",
+        "eslint-plugin-import": "^2.26.0",
+        "eslint-plugin-prettier": "^4.0.0",
+        "eslint-plugin-react": "^7.30.0",
+        "eslint-plugin-react-hooks": "^4.5.0",
+        "eslint-plugin-simple-import-sort": "^7.0.0",
+        "eslint-plugin-unused-imports": "^2.0.0",
+        "npm-run-all": "^4.1.5",
+        "prettier": "^2.6.2",
         "storyblok-rich-text-react-renderer": "^2.3.1",
         "typescript": "4.6.2"
     }
